fix(web): invisible reader spinner, invalid pagination url and zero-width project sidebar in mobile devices

--- a/web/src/styles/main.less
+++ b/web/src/styles/main.less
@@ -607,6 +607,10 @@ body > main > section {
     max-width: initial;
   }
 
+  .view#project .sidebar .metadata {
+    width: initial;
+  }
+
   .entry .metadata-line-group .metadata-line-right > * {
     display: block;
     margin-left: 0;
