--- a/web/src/styles/reader.less
+++ b/web/src/styles/reader.less
@@ -327,8 +327,9 @@
 .reader .page .loading {
   position: relative;
   overflow: hidden;
+  width: 12rem;
   height: 0;
-  padding-top: calc(3 / 2 * 100vh);
+  padding-top: 100vh;
 
   div {
     position: absolute;
